# binlog2sql_GUI

./: .gitignore  BINLOG_FILE_FIX_COMPARISON.md  BINLOG_FILE_FIX_SUMMARY.md  BINLOG_FILE_FIX_VERIFICATION.md  BINLOG_SELECTION_IMPLEMENTATION_MYSQL8.md  GUI_VERSION_IDENTIFICATION.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_REPORT_BINLOG_SELECTION.md  IMPLEMENTATION_SUMMARY.md  MASTER_BRANCH_SYNC_REPORT.md  MYSQL80_BRANCH_SYNC_REPORT.md  MYSQL80_COMPATIBILITY_FIX.md  MYSQL_VERSION_COMPATIBILITY.md  PROJECT_SUMMARY.md  README.md  ROLLBACK_COMMENTS_FEATURE.md  USAGE_EXAMPLE.md  VERIFICATION_CHECKLIST.md  build_nuitka.py  demo_logging.py  detect_mysql_version.py  main.py  pyproject.toml  quick_setup.py  resources.qrc  resources_rc.py  setup_mysql_branches.py  test_app.py
core/: binlog_parser.py  binlog_util.py  logger.py
docs/: BINLOG_FILE_FIX_QUICK_REFERENCE.md  BINLOG_FILE_FIX_REPORT.md  GUI_BINLOG_SELECTION_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  KEYWORD_FILTER_BUG_FIX.md  KEYWORD_FILTER_COMPLETION_REPORT.md  KEYWORD_FILTER_TEST_GUIDE.md  KEYWORD_FILTER_USER_GUIDE.md  PROJECT_SUMMARY.md  ROLLBACK_COMMENTS_OPTIMIZATION.md  SQL_KEYWORD_FILTER_IMPLEMENTATION.md  USAGE_EXAMPLE.md
gui/: config_manager.py  connection_dialog.py  main_window.py  sql_highlighter.py
