[project]
name = "binlog2sql-gui"
version = "0.1.0"
description = "MySQL Binlog to SQL GUI Tool - MySQL 5.7 Compatible Version"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3", # 最后一个稳定支持MySQL 5.7的版本
    "mysql-replication==0.46.0",
    "pymysql>=1.1.1",
    "pyside6>=6.9.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.4",
]
