[project]
name = "binlog2sql-gui"
version = "0.1.0"
description = "MySQL Binlog to SQL GUI Tool - MySQL 8.0 Compatible Version"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "mysql-replication>=1.0.9",
    "pymysql>=1.1.1",
    "pyside6>=6.9.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
]
